Add blog link to navigation

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <a href="#shift" class="hover:text-white transition">The Shift</a>
         <a href="#services" class="hover:text-white transition">What We Do</a>
         <a href="#philosophy" class="hover:text-white transition">Philosophy</a>
+        <a href="/blog/" class="hover:text-white transition">Blog</a>
         <a href="#contact" class="bg-gold-500/10 text-gold-400 px-4 py-2 rounded-lg hover:bg-gold-500/20 transition">Work With Us</a>
       </div>
     </div>
